Fixat scrollbar

--- a/htdocs/css/kmom03.css
+++ b/htdocs/css/kmom03.css
@@ -640,7 +640,7 @@ body {
   color: #333;
   background-color: white;
   height: 100%;
-  width: 99.5%;
+  width: 100%;
   font: 16px/1.5 Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", Georgia, "Times New Roman", Times, serif;
 }
 img {
