--- a/htdocs/css/kmom04.css
+++ b/htdocs/css/kmom04.css
@@ -603,7 +603,7 @@ body {
   color: #333;
   background-color: white;
   height: 100%;
-  width: 99.5%;
+  width: 100%;
   font: 16px/1.5 Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", Georgia, "Times New Roman", Times, serif;
 }
 img {
@@ -1020,9 +1020,6 @@ hr::after {
   color: black;
   text-decoration: none;
 }
-.region-flash img {
-  width: 100%;
-}
 /**
     * Navbar layout
     */
@@ -1041,12 +1038,15 @@ hr::after {
 .outer-wrap-main {
   /*flex-grow: 1;
     flex-shrink: 0;*/
-  flex: 1 0 auto;
-  height: 70vh;
 }
-.inner-wrap-main .row {
+.inner-wrap-main {
   display: flex;
   flex-direction: row;
+  flex: 1 0 auto;
+}
+.row {
+  width: 100%;
+  margin: 0;
 }
 .row::after {
   content: "";
