--- a/theme/htdocs/css/minimalistiskt.css
+++ b/theme/htdocs/css/minimalistiskt.css
@@ -652,7 +652,7 @@ body {
   color: #333;
   background-color: white;
   height: 100%;
-  width: 99.5%;
+  width: 100%;
   font: 16px/1.5 'Text Me One', sans-serif;
 }
 img {
@@ -1069,9 +1069,6 @@ hr::after {
   color: black;
   text-decoration: none;
 }
-.region-flash img {
-  width: 100%;
-}
 /**
     * Navbar layout
     */
@@ -1090,12 +1087,15 @@ hr::after {
 .outer-wrap-main {
   /*flex-grow: 1;
     flex-shrink: 0;*/
-  flex: 1 0 auto;
-  height: 70vh;
 }
-.inner-wrap-main .row {
+.inner-wrap-main {
   display: flex;
   flex-direction: row;
+  flex: 1 0 auto;
+}
+.row {
+  width: 100%;
+  margin: 0;
 }
 .row::after {
   content: "";
