--- a/theme/src/base/base_kmom03.less
+++ b/theme/src/base/base_kmom03.less
@@ -23,7 +23,7 @@ body {
     color: @colorBody;
     background-color: @bgColorBody;
     height: 100%;
-    width: 99.5%;
+    width: 100%;
     #desinax-hgrid.font(@fontSizeBody);
     //font: 100.01%/1 @fontFamilyBody;
 }
